# tiny-arduino-serial-port

./: LICENSE.md  README.md
arduino-patch/: variant.patch
include/tiny/: basic.hpp  container.hpp  serial.hpp  static_assert.hpp  utils.hpp
include/tiny/detail/: auto_sense.hpp
include/tiny/serial/: uart.hpp  uart_due.hpp  uart_mega.hpp  utils.hpp
include/tiny/serial/detail/: defs.hpp  uart.ipp  uart_defs.hpp  uart_due_defs.hpp
src/serial/: uart.cpp  uart_due.ipp  uart_mega.ipp
test/: CMakeLists.txt  container_test.cpp
